trying to fix image paths

--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
                         </p>
                     </header>
                     <section class="project-card__screenshot-section">
-                        <img class="project-card__screenshot" src="./media/DiscHubScoring.png" alt="DiscHub application scoring screenshot">
-                        <img src="./media/DiscHubScorecard.png" alt="DiscHub app scorecard screenshot" class="project-card__screenshot">
+                        <img src="media/DiscHubScoring.png" alt="DiscHub application scoring screenshot" class="project-card__screenshot">
+                        <img src="media/DiscHubScorecard.png" alt="DiscHub app scorecard screenshot" class="project-card__screenshot">
                     </section>
                     <footer class="project-card__footer">
                         <div class="project-card__links">
