bit of email form styling, buttons hover styling

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </nav>
         <header id="header" class="header">
             <h1 class="header__title">Martin Ojasalu</h1>
-            <p class="header__text">Full stack web developer</p>
+            <p class="header__text">Web developer</p>
             <section class="header__links">
                 <a href="https://github.com/MrtnOj" class="header__link" target="_blank"><i class="fab fa-github fa-3x"></i></a>
                 <a href="https://www.linkedin.com/in/martin-ojasalu" class="header__link" target="_blank"><i class="fab fa-linkedin fa-3x"></i></a>
